# StathamTherapy

./: .flake8  .gitignore  .pre-commit  README.md  pyproject.toml
docker/sonar/: docker-compose.yaml
front/: .eslintrc.cjs  .prettierrc  .stylelintrc.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
front/src/: index.css  main.tsx
front/src/components/App/: App.tsx
front/src/components/Navbar/: Navbar.tsx
front/src/pages/: AppRoutes.tsx
front/src/pages/Chat/: Chat.tsx
front/src/pages/Profile/: Profile.tsx
front/src/ui/Img/: Img.tsx
src/: migrate.py
src/app/: main.py
src/app/providers/chat/: check_user_has_chat.py  create_chat.py  create_new_dialogue.py  get_chat_messages.py  get_user_chats.py  put_message.py  subscribe_chat.py
src/app/providers/user/: create_user.py  deps.py  get_user.py  login_user.py  utils.py
src/app/routes/api/: api_router.py
src/app/routes/api/auth/: all.py  login.py  me.py  sign_up.py
src/app/schemas/: auth.py  chat.py  common.py
src/config/: config.py  meta.py
src/database/: database.py  init_db.py
src/database/models/: _all_models.py  chat.py  message.py  subscription_user_chat.py  user.py
src/logger/: logger.py
src/scripts/: dev.py  locustfile.py  test.py
src/statham/: collection.py  reply.py  user.py
src/tests/app/providers/: test_user.py
src/tests/fixtures/: db_engine.py
src/utils/: env.py
tests/test_app/test_providers/: test_chat.py  test_user.py
tests/test_app/test_routes/: test_api.py  test_api_auth.py  test_api_chat.py
tests/test_config/: test_meta.py
(+6 files in other folders)
